# ensembly-core

./: .gitignore  CLAUDE.md  Cargo.toml  PHASE_1_TODO.md
crates/ensembly-core/: Cargo.toml
crates/ensembly-core/src/: db.rs  ipc.rs  lib.rs  main.rs  plugin_runtime.rs
crates/ensembly-shell/: Cargo.toml
crates/ensembly-shell/src/: main.rs
crates/ensembly-types/: Cargo.toml
crates/ensembly-types/src/: lib.rs
docs/: APP_ARCHITECTURE.md  APP_CONCEPT.md  DESIGN_SYSTEM.md  PROJECT_ROADMAP.md  TECHNICAL_SPECIFICATION.md
plugins/hello-display/: Cargo.toml
plugins/hello-display/src/: lib.rs
plugins/hello-feature/: Cargo.toml
plugins/hello-feature/src/: lib.rs
wit/: feature-plugin.wit
