[package]
name = "ensembly-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ensembly-types = { path = "../ensembly-types" }
libsql = "0.6"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
wasmtime = { version = "28", features = ["component-model"] }
wasmtime-wasi = "28"
